# http_shrinkwrap

./: .bumpversion.cfg  .gitignore  Makefile  Pipfile  README.md  hsw.py  pyproject.toml  requirements.txt  setup.py  test.py  test.sh  test_external.sh  test_internal.sh  test_server.py
.github/workflows/: ci.yml
http_shrinkwrap/: __init__.py  api.py  bin.py
test/: test_external.sh  test_internal.sh  test_server.py
